--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 </head>
 
 <body class="">
+    <div class="fixed top-1/2 right-0 transform -translate-y-1/2 z-30">
+        <ul class="flex flex-col gap-4 lg:mt-32">
+            <li>
+                <a href="#contact"
+                    class="w-8 h-8 lg:w-11 lg:h-11 hover:scale-125 transition-all ease-linear  flex justify-center items-center bg-sinigreen">
+                    <img class="w-3/4" src="/assets/svg/mensaje.svg" alt=""></a>
+            </li>
+            <li>
+                <a href=""
+                    class="w-8 h-8 lg:w-11 lg:h-11 hover:scale-125 transition-all ease-linear flex justify-center items-center bg-sinigreen">
+                    <img class="w-3/4" src="/assets/svg/whatsapp.svg" alt=""></a>
+            </li>
+        </ul>
+    </div>
     <header class="bg-white fixed z-40 w-full top-0 navbar xl:py-2 xl:shadow-lg">
         <div class="mx-auto max-w-screen-xl px-4 sm:px-6 md:px-4 lg:px-8">
             <div class="flex h-16 items-center justify-between">
@@ -60,28 +74,38 @@
                 <div id="mobile-menu" class="mobile-menu fixed right-5 top-16 z-50 bg-siniblue rounded-b-md ">
                     <ul class="flex flex-col items-center text-sm divide-y divide-sinigreen w-52 text-center">
                         <li class="w-full hover:bg-sinigreen transition-all ease-in-out group py-2">
-                            <a class="text-white transition group-hover:text-siniblue" href="#inicio"> Inicio </a>
+                            <a class="text-white transition
+                             group-hover:text-siniblue" href="#inicio" onclick="toggleMenu()"> Inicio </a>
                         </li>
 
                         <li class="w-full hover:bg-sinigreen transition-all ease-in-out group py-2">
-                            <a class="text-white transition group-hover:text-siniblue" href="#por-que-retirar"> ¿Por qué
+                            <a class="text-white transition group-hover:text-siniblue" href="#por-que-retirar"
+                                onclick="toggleMenu()"> ¿Por qué
                                 retirar
                                 mis implantes? </a>
                         </li>
 
                         <li class="w-full hover:bg-sinigreen transition-all ease-in-out group py-2">
-                            <a class="text-white transition group-hover:text-siniblue" href="#complicaciones">
+                            <a class="text-white transition group-hover:text-siniblue" href="#complicaciones"
+                                onclick="toggleMenu()">
                                 Complicaciones </a>
                         </li>
 
                         <li class="w-full hover:bg-sinigreen transition-all ease-in-out group py-2">
-                            <a class="text-white transition group-hover:text-siniblue" href="#procedimientos">
+                            <a class="text-white transition group-hover:text-siniblue" href="#procedimientos"
+                                onclick="toggleMenu()">
                                 Procedimientos </a>
                         </li>
 
                         <li class="w-full hover:bg-sinigreen transition-all ease-in-out group py-2">
-                            <a class="text-white transition group-hover:text-siniblue" href="#especialistas">
+                            <a class="text-white transition group-hover:text-siniblue" href="#especialista"
+                                onclick="toggleMenu()">
                                 Especialista </a>
+                        </li>
+                        <li class="w-full hover:bg-sinigreen transition-all ease-in-out group py-2">
+                            <a class="text-white transition group-hover:text-siniblue" href="#contact"
+                                onclick="toggleMenu()">
+                                Contacto </a>
                         </li>
                     </ul>
                 </div>
