--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <li>
                 <a href="#contact"
                     class="w-8 h-8 lg:w-11 lg:h-11 hover:scale-125 transition-all ease-linear  flex justify-center items-center bg-sinigreen">
-                    <img class="w-3/4" src="/assets/svg/mensaje.svg" alt=""></a>
+                    <img class="w-3/4" src="./assets/svg/mensaje.svg" alt=""></a>
             </li>
             <li>
                 <a href=""
                     class="w-8 h-8 lg:w-11 lg:h-11 hover:scale-125 transition-all ease-linear flex justify-center items-center bg-sinigreen">
-                    <img class="w-3/4" src="/assets/svg/whatsapp.svg" alt=""></a>
+                    <img class="w-3/4" src="./assets/svg/whatsapp.svg" alt=""></a>
             </li>
         </ul>
     </div>
@@ -260,13 +260,13 @@
                 <div class="w-full md:w-1/3 mt-10 md:mt-0 relative">
                     <img class="w-1/2 mx-auto md:w-full" src="./assets/image-into.jpg" alt="">
                     <div id="hexagon-siluette-1" class="absolute -right-10 bottom-[190px] md:-top-20 md:-right-24">
-                        <img class="w-52" src="/assets/svg/hexagon-siluette.svg" alt="">
+                        <img class="w-52" src="./assets/svg/hexagon-siluette.svg" alt="">
                     </div>
                     <div id="hexagon-siluette-2" class="absolute left-10 bottom-0 transform rotate-180 md:-left-10">
-                        <img class="w-36" src="/assets/svg/hexagon-siluette.svg" alt="">
+                        <img class="w-36" src="./assets/svg/hexagon-siluette.svg" alt="">
                     </div>
                     <div id="plants-siluette-1" class="absolute -left-2 top-0 transform">
-                        <img class="w-36" src="/assets/svg/plants-siluette.svg" alt="">
+                        <img class="w-36" src="./assets/svg/plants-siluette.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -302,10 +302,10 @@
                 <div class="w-full md:w-1/3 mt-10 md:mt-0 relative">
                     <img class="w-1/2 mx-auto md:w-full relative z-10" src="./assets/retirar-image.png" alt="">
                     <div id="plants-siluette-3" class="absolute left-8 -top-14 transform z-0">
-                        <img class="w-44" src="/assets/svg/plants-siluette-2.svg" alt="">
+                        <img class="w-44" src="./assets/svg/plants-siluette-2.svg" alt="">
                     </div>
                     <div id="hexagon-siluette-3" class="absolute left-8 top-14 transform z-20 md:-left-20">
-                        <img class="w-36" src="/assets/svg/hexagon-siluette.svg" alt="">
+                        <img class="w-36" src="./assets/svg/hexagon-siluette.svg" alt="">
                     </div>
                 </div>
                 <div class="w-full md:w-3/4 md:pl-8">
@@ -390,14 +390,14 @@
                             class="font-black">tomes una decisión informada</span>.
                     </p>
                     <div id="plants-siluette-4" class="absolute -left-20 bottom-0 transform z-0 rotate-90 opacity-50">
-                        <img class="w-80" src="/assets/svg/plants-siluette-3.svg" alt="">
+                        <img class="w-80" src="./assets/svg/plants-siluette-3.svg" alt="">
                     </div>
                 </div>
                 <div class="w-full md:w-1/3 mt-10 md:mt-0 relative">
                     <img class="w-1/2 mx-auto md:w-full z-10 relative" src="./assets/alguna-complicaciones-image.png"
                         alt="">
                     <div id="plants-siluette-5" class="absolute -right-20 bottom-0 transform z-0 w-80">
-                        <img class="w-full object-cover object-left" src="/assets/svg/plants-siluette-3.svg" alt="">
+                        <img class="w-full object-cover object-left" src="./assets/svg/plants-siluette-3.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -408,7 +408,7 @@
                     <img class="w-full mx-auto md:h-full object-cover relative z-10" src="./assets/sabias-image.png"
                         alt="">
                     <div id="random-siluette" class="absolute -left-5 bottom-0 transform z-0 opacity-50">
-                        <img class="w-full" src="/assets/svg/random-siluette.svg" alt="">
+                        <img class="w-full" src="./assets/svg/random-siluette.svg" alt="">
                     </div>
                 </div>
                 <div class="w-full md:w-1/2 mt-10 md:mt-0 relative md:pl-6 md:py-5">
@@ -436,7 +436,7 @@
 
                     </p>
                     <div id="plants-siluette-6" class="absolute -right-10 top-0 transform z-0 opacity-20">
-                        <img class="w-full" src="/assets/svg/plants-siluette-4.svg" alt="">
+                        <img class="w-full" src="./assets/svg/plants-siluette-4.svg" alt="">
                     </div>
                 </div>
 
@@ -467,7 +467,7 @@
                                 class="h-9 w-9 bg-sinigreen font-bold text-2xl rounded-full hover:animate-bounce absolute right-10 md:right-52 lg:right-10 lg:-top-5 xl:right-16 xl:top-0">
                                 +
                             </button>
-                            <img class="w-44 lg:w-24 mx-auto" src="/assets/process-1.png" alt="Periaerolar">
+                            <img class="w-44 lg:w-24 mx-auto" src="./assets/process-1.png" alt="Periaerolar">
                         </div>
                         <h4 class="text-sinigreen font-bold mt-5">Periaerolar</h4>
                         <p class="mt-7 md:mt-4 md:px-20 lg:px-0 text-sinigreen text-sm lg:text-xs">
@@ -480,7 +480,7 @@
                             <button
                                 class="h-9 w-9 bg-sinigreen font-bold text-2xl rounded-full hover:animate-bounce absolute right-10 md:right-52 lg:right-10 lg:-top-5 xl:right-16 xl:top-0">
                                 +
-                            </button><img class="w-44 lg:w-24 mx-auto" src="/assets/process-2.png" alt="Vertical">
+                            </button><img class="w-44 lg:w-24 mx-auto" src="./assets/process-2.png" alt="Vertical">
                         </div>
 
                         <h4 class="text-sinigreen font-bold mt-5">Vertical</h4>
@@ -496,7 +496,7 @@
                                 class="h-9 w-9 bg-sinigreen font-bold text-2xl rounded-full hover:animate-bounce absolute right-10 md:right-52 lg:right-10 lg:-top-5 xl:right-16 xl:top-0">
                                 +
                             </button>
-                            <img class="w-44 lg:w-24 mx-auto" src="/assets/process-3.png" alt="Tipo T">
+                            <img class="w-44 lg:w-24 mx-auto" src="./assets/process-3.png" alt="Tipo T">
                         </div>
                         <h4 class="text-sinigreen font-bold mt-5">Tipo "T"</h4>
                         <p class="mt-7 md:mt-4 md:px-20 lg:px-0 text-sinigreen text-sm lg:text-xs">
@@ -509,7 +509,7 @@
             </div>
         </section>
         <div id="addon-siluette-3" class="transform -translate-y-10">
-            <img src="/assets/svg/addon-siluette-1.svg" alt="">
+            <img src="./assets/svg/addon-siluette-1.svg" alt="">
         </div>
         <section id="especialista" class="mx-auto max-w-screen-xl px-4 sm:px-6 md:px-0 lg:px-8 mt-10">
             <div class="w-full flex justify-between flex-col-reverse md:flex-row xl:items-center">
@@ -517,7 +517,7 @@
                     <img class="w-3/4 mx-auto md:w-full" src="./assets/dr-sanchez-sigel.png" alt="">
                     <div id="plants-siluette-7"
                         class="absolute -left-20 -bottom-20 transform z-0 md:-left-20 md:bottom-0">
-                        <img class="w-52" src="/assets/svg/plants-siluette-5.svg" alt="">
+                        <img class="w-52" src="./assets/svg/plants-siluette-5.svg" alt="">
                     </div>
                 </div>
                 <div class="w-full md:w-1/2 md:pl-6 md:pr-8 xl:pr-16">
@@ -577,17 +577,17 @@
                             Enviar
                             <span>
                                 <img class="ml-4 w-6 transform group-hover:translate-x-5 transition-transform"
-                                    src="/assets/svg/form-arrow.svg" alt="">
+                                    src="./assets/svg/form-arrow.svg" alt="">
                             </span>
                         </button>
                     </div>
                 </form>
             </div>
             <div id="addon-siluette-4" class="transform -translate-y-5 relative z-0">
-                <img class="w-full" src="/assets/svg/addon-siluette-1.svg" alt="">
+                <img class="w-full" src="./assets/svg/addon-siluette-1.svg" alt="">
             </div>
             <div id="hexagon-siluette-4" class="absolute -left-28 top-40">
-                <img class="w-52" src="/assets/svg/hexagon-siluette.svg" alt="">
+                <img class="w-52" src="./assets/svg/hexagon-siluette.svg" alt="">
             </div>
         </section>
         <div id="patologie-modal"
