--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <li class="splide__slide">
                         <div class="w-full h-[50vh] lg:h-auto relative">
                             <div
-                                class="bg-white bg-opacity-40 absolute left-0 top-0 h-full w-2/3 lg:w-1/2 flex flex-col justify-center items-center pl-16 pr-4">
+                                class="absolute left-0 top-0 h-full w-2/3 lg:w-1/2 flex flex-col justify-center items-center pl-16 pr-4 bg-gradient-to-r from-white to-transparent">
                                 <h1
                                     class="font-black uppercase text-siniblue leading-tight md:text-xl lg:text-2xl xl:text-3xl">
                                     Un
@@ -195,12 +195,17 @@
                         </div>
                     </li>
                     <li class="splide__slide">
-                        <div class="w-full h-full relative">
+                        <div class="w-full h-[50vh] lg:h-auto relative">
                             <div
-                                class="bg-white bg-opacity-40 absolute left-0 top-0 h-full w-2/3 flex flex-col justify-center items-center pl-16 pr-4">
-                                <h1 class="font-black uppercase text-siniblue leading-tight">Un nuevo cambio para ti y
+                                class="absolute left-0 top-0 h-full w-2/3 lg:w-1/2 flex flex-col justify-center items-center pl-16 pr-4 bg-gradient-to-r from-white to-transparent">
+                                <h1
+                                    class="font-black uppercase text-siniblue leading-tight md:text-xl lg:text-2xl xl:text-3xl">
+                                    Un
+                                    nuevo cambio
+                                    para ti y
                                     para tu nueva vida.</h1>
-                                <p class="mt-4 text-sm">Evita un problema y toma la mejor decisión
+                                <p class="mt-4 text-xs md:text-base xl:text-lg">Evita un problema y toma la mejor
+                                    decisión
                                     para tu salud y tu cuerpo.</p>
                                 <div class="mt-4">
                                     <a class="bg-siniblue leading-none uppercase text-white text-sm font-bold px-6 py-2 rounded-full"
@@ -209,7 +214,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <img src="./assets/slide-1.jpg" alt="">
+                            <img class="h-full w-full object-cover" src="./assets/slide-1.jpg" alt="">
                         </div>
                     </li>
                 </ul>
@@ -417,7 +422,7 @@
             </div>
         </section>
         <section class="mx-auto max-w-screen-xl px-4 sm:px-6 md:px-0 lg:px-8 mt-20 bg-sinigreen">
-            <div class="w-full flex justify-between flex-col md:flex-row pb-14 md:pb-0 xl:items-center">
+            <div class="w-full flex justify-between flex-col md:flex-row pb-14 md:pb-0 lg:items-center">
                 <div class="w-full md:w-1/2 relative" data-entrance="from-bottom" data-entrance-delay="1000">
                     <img class="w-full mx-auto md:h-full object-cover relative z-10" src="./assets/sabias-image.png"
                         alt="">
@@ -608,12 +613,13 @@
             </div>
         </section>
         <div id="patologie-modal"
-            class="h-screen w-screen fixed top-0 left-0 bg-black bg-opacity-40  justify-center items-center hidden z-50">
-            <modal class="w-3/4 max-w-screen-md h-auto bg-white pt-12 pb-5 px-6 rounded-lg">
+            class="h-screen w-screen fixed top-0 left-0 bg-black bg-opacity-40  justify-center items-start md:items-center hidden z-50 overflow-y-scroll py-5 md:py-0">
+            <modal
+                class="w-11/12 md:w-3/4 max-w-screen-md h-auto bg-white pt-4 md:pt-12 pb-3 md:pb-5 px-3 md:px-6 rounded-lg">
                 <h3 id="patologie-title" class="font-bold text-center mb-2 uppercase">
                     Contractura capsular
                 </h3>
-                <div id="patologie-description" class="font-light">
+                <div id="patologie-description" class="font-light text-sm md:text-base">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit
                 </div>
                 <div class="flex justify-center items-center mt-10">
@@ -781,7 +787,7 @@
             description.innerHTML = data.description
             modal.classList.remove('hidden')
             modal.classList.add('flex')
-
+            document.querySelector('html').style.overflow = 'hidden'
         }
         const closeModal = () => {
             const modal = document.getElementById('patologie-modal')
@@ -792,7 +798,7 @@
             description.textContent = ""
             modal.classList.add('hidden')
             modal.classList.remove('flex')
-
+            document.querySelector('html').style.overflow = 'auto'
         }
         const toggleMenu = () => {
             const menu = document.getElementById('mobile-menu')
