featured: add SEO metatags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sinimplant</title>
+    <title>Last Time</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -12,6 +12,7 @@
     <link href="./css/tailwindcss-compiled.css" rel="stylesheet">
     <link href="./css/custom.css" rel="stylesheet">
     <link href="./css/splide-default.min.css" rel="stylesheet">
+
     <style>
         /* Ensure elements are hidden while ScrollEntrance is loading */
         [data-entrance] {
@@ -23,6 +24,29 @@
             visibility: hidden;
         }
     </style>
+    <meta name="description"
+        content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+    <meta name="keywords"
+        content="palabra clave 1, palabra clave 2, palabra clave 3, basadas en el contenido y temas del sitio.">
+    <meta name="author" content="Last Time">
+    <meta name="robots" content="index, follow">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.tusitio.com">
+    <meta property="og:title" content="Last Time">
+    <meta property="og:description"
+        content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+    <meta property="og:image" content="https://www.tusitio.com/path/to/image.jpg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="./assets/favicon.png">
+    <meta property="twitter:url" content="https://www.tusitio.com">
+    <meta property="twitter:title" content="Last Time">
+    <meta property="twitter:description"
+        content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+    <meta property="twitter:image" content="https://www.tusitio.com/path/to/image.jpg">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./assets/favicon.png">
+
 </head>
 
 <body class="">
