--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     <meta name="robots" content="index, follow">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.tusitio.com">
-    <meta property="og:title" content="Last Time">
+    <meta property="og:url" content="http://retirodeimplantes.com">
+    <meta property="og:title" content="retirodeimplantes">
     <meta property="og:description"
         content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
-    <meta property="og:image" content="https://www.tusitio.com/path/to/image.jpg">
+    <meta property="og:image" content="http://retirodeimplantes.com/assets/favicon.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="./assets/favicon.png">
-    <meta property="twitter:url" content="https://www.tusitio.com">
+    <meta property="twitter:url" content="http://retirodeimplantes.com">
     <meta property="twitter:title" content="Last Time">
     <meta property="twitter:description"
         content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
-    <meta property="twitter:image" content="https://www.tusitio.com/path/to/image.jpg">
+    <meta property="twitter:image" content="http://retirodeimplantes.com/assets/favicon.png">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets/favicon.png">
 
