--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
     </style>
     <meta name="description"
-        content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+        content="Especialistas en el retiro de implantes de mama, gluteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
     <meta name="keywords"
         content="palabra clave 1, palabra clave 2, palabra clave 3, basadas en el contenido y temas del sitio.">
     <meta name="author" content="Last Time">
@@ -35,14 +35,14 @@
     <meta property="og:url" content="http://retirodeimplantes.com">
     <meta property="og:title" content="retirodeimplantes">
     <meta property="og:description"
-        content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+        content="Especialistas en el retiro de implantes de mama, gluteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
     <meta property="og:image" content="http://retirodeimplantes.com/assets/favicon.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="./assets/favicon.png">
     <meta property="twitter:url" content="http://retirodeimplantes.com">
     <meta property="twitter:title" content="Last Time">
     <meta property="twitter:description"
-        content="Especialistas en el retiro de implantes de mama o traseros. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+        content="Especialistas en el retiro de implantes de mama, gluteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
     <meta property="twitter:image" content="http://retirodeimplantes.com/assets/favicon.png">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets/favicon.png">
@@ -284,7 +284,7 @@
                     </div>
                     <p class="mt-4">
                         Bienvenido a <span class="font-black">Last Time</span>, especialistas en el retiro de implantes
-                        de mama o traseros.
+                        de mama, gluteo, pantorrilla, mentón, etc.
                     </p>
                     <p class="mt-4">
                         Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí
@@ -362,7 +362,7 @@
 
                     </p>
                     <p class="mt-4">
-                        Nuestro objetivo es proporcionarte la información y reconocer las alternativas para una merjor
+                        Nuestro objetivo es proporcionarte la información y reconocer las alternativas para una mejor
                         <span class="font-black">toma de decisión</span>.
                     </p>
                 </div>
@@ -377,7 +377,7 @@
                 <div class="w-full md:w-3/4 relative md:pr-12" data-entrance="from-right" data-entrance-delay="1000">
                     <h2 class="text-2xl font-black text-siniblue">Algunas complicaciones
                         que pudieran presentar
-                        los implantes</h2>
+                        los implantes:</h2>
                     <p class="mt-4">
                         Algún tiempo atrás, después de mucho meditarlo, decidiste tomar una <span
                             class="font-black">importante decisión en tu
@@ -492,7 +492,7 @@
                 <div class="w-full lg:w-1/3" data-entrance="from-right" data-entrance-delay="1000">
                     <h3 class="text-sinigreen font-black text-xl">
                         Nuestros
-                        procedimiento Quirúrgicos
+                        procedimientos Quirúrgicos
                     </h3>
                     <p class="mt-4 text-sinigreen text-sm">
                         La técnica quirúrgica varía en cada paciente, nuestro objetivo será encontrar la mejor manera de
@@ -513,8 +513,8 @@
                                 name: 'Periaerolar',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se realiza una incisión en el borde inferior de la areola.</li>
-                                    <li>A través de esta incisión, el cirujano crea un bolsillo en el tejido mamario.</li>
-                                    <li>El implante se inserta en el bolsillo, ya sea debajo del músculo pectoral o directamente detrás del tejido mamario.</li>
+                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (Contractura capsular) y el exceso de piel.</li>
+                                    <li>Una vez retirado el implante el cirujano retira el exceso de piel y cápsula (Contractura capsular) con una insición periareolar (alrededor de la areola) como muestra la imagen.</li>
                                     <li>La incisión se cierra con suturas y se aplica un vendaje.</li>
                                     </ul>`,
                                 image: './assets/process-1.png'
@@ -537,8 +537,7 @@
                                 name: 'Vertical',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se hace una incisión alrededor del borde inferior de la areola y una segunda incisión vertical desde la areola hasta el pliegue del seno.</li>
-                                    <li>A través de estas incisiones, el cirujano crea un bolsillo para el implante.</li>
-                                    <li>El implante se coloca en el bolsillo, ya sea debajo del músculo pectoral o detrás del tejido mamario.</li>
+                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (Contractura capsular) y el exceso de piel.</li>
                                     <li>Las incisiones se cierran con suturas y se coloca un vendaje.</li>
                                     </ul>`,
                                 image: './assets/process-2.png'
@@ -562,8 +561,7 @@
                                 name: 'Tipo T',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se realizan tres incisiones: una alrededor del borde de la areola, una vertical desde la areola hasta el pliegue del seno, y una horizontal a lo largo del pliegue del seno, formando una T invertida.</li>
-                                    <li>A través de estas incisiones, el cirujano remueve el exceso de piel y tejido si es necesario, y crea un bolsillo para el implante.</li>
-                                    <li>El implante se coloca en el bolsillo, ya sea debajo del músculo pectoral o detrás del tejido mamario.</li>
+                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (Contractura capsular) y el exceso de piel.</li>
                                     <li>Las incisiones se cierran con suturas y se aplica un vendaje.</li>
                                     </ul>`,
                                 image: './assets/process-3.png'
@@ -604,6 +602,12 @@
                         Médico especialista en Cirugía Plástica
                         Estética y Reconstructiva en Guadalajara
                     </p>
+                    <p class="font-bold text-siniblue text-sm">
+                        Cédula Medico General: 3635941
+                    </p>
+                    <p class="font-bold text-siniblue text-sm">
+                        Cédula Especialidad: 7153924
+                    </p>
                     <p class="mt-4">
                         Preparado y reconocido Cirujano. Miembro del Consejo Mexicano de Cirugía Plástica, Estética y
                         Reconstructiva, A.C.
@@ -616,6 +620,9 @@
                     <p class="mt-4">
                         Volver a ver esa gran sonrisa.
                     </p>
+                    <a href="" class="uppercase text-xs underline">
+                        ver curriculum
+                    </a>
                 </div>
 
             </div>
