fix: show buttons on mobile patologies

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                     <div data-patology="name" class="ml-2 font-bold text-sm">Contractura capsular</div>
                                 </div>
                                 <button
-                                    class="text-siniemerald items-center justify-center flex opacity-0 group-hover:opacity-100 transform translate-x-3 group-hover:translate-x-0 ease-linear transition-transform text-sm">Saber
+                                    class="text-siniemerald items-center justify-center flex md:opacity-0 md:group-hover:opacity-100 transform md:translate-x-3 md:group-hover:translate-x-0 ease-linear transition-transform text-sm">Saber
                                     más
                                     <span class="ml-2"><svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg"
                                             viewBox="0 0 22 26">
