fix: text adjusments and add whatsapp, remove clone slide

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link href="./css/tailwindcss-compiled.css" rel="stylesheet">
-    <link href="./css/custom.css" rel="stylesheet">
     <link href="./css/splide-default.min.css" rel="stylesheet">
+    <link href="./css/custom.css" rel="stylesheet">
 
     <style>
         /* Ensure elements are hidden while ScrollEntrance is loading */
@@ -58,7 +58,8 @@
                     <img class="w-3/4" src="./assets/svg/mensaje.svg" alt=""></a>
             </li>
             <li>
-                <a href=""
+                <a target="_blank"
+                    href="https://api.whatsapp.com/send?phone=5213322763547&text=Hola%2C%20quisiera%20mas%20informaci%C3%B3n%20sobre%20el%20retiro%20de%20implantes"
                     class="w-8 h-8 lg:w-11 lg:h-11 hover:scale-125 transition-all ease-linear flex justify-center items-center bg-sinigreen">
                     <img class="w-3/4" src="./assets/svg/whatsapp.svg" alt=""></a>
             </li>
@@ -195,29 +196,6 @@
         <section id="inicio" class="splide mt-16 lg:mt-20" aria-label="Splide Basic HTML Example" data-entrance="fade">
             <div class="splide__track">
                 <ul class="splide__list">
-                    <li class="splide__slide">
-                        <div class="w-full h-[50vh] lg:h-auto relative">
-                            <div
-                                class="absolute left-0 top-0 h-full w-2/3 lg:w-1/2 flex flex-col justify-center items-center pl-16 pr-4 bg-gradient-to-r from-white to-transparent">
-                                <h1
-                                    class="font-black uppercase text-siniblue leading-tight md:text-xl lg:text-2xl xl:text-3xl">
-                                    Un
-                                    nuevo cambio
-                                    para ti y
-                                    para tu nueva vida.</h1>
-                                <p class="mt-4 text-xs md:text-base xl:text-lg">Evita un problema y toma la mejor
-                                    decisión
-                                    para tu salud y tu cuerpo.</p>
-                                <div class="mt-4">
-                                    <a class="bg-siniblue leading-none uppercase text-white text-sm font-bold px-6 py-2 rounded-full"
-                                        href="#contact">
-                                        Contactar
-                                    </a>
-                                </div>
-                            </div>
-                            <img class="h-full w-full object-cover" src="./assets/slide-1.jpg" alt="">
-                        </div>
-                    </li>
                     <li class="splide__slide">
                         <div class="w-full h-[50vh] lg:h-auto relative">
                             <div
@@ -510,7 +488,7 @@
                             <button
                                 class="h-9 w-9 bg-sinigreen font-bold text-2xl rounded-full hover:animate-bounce absolute right-10 md:right-52 lg:right-10 lg:-top-5 xl:right-16 xl:top-0"
                                 onclick="openProcedureModal({
-                                name: 'Periaerolar',
+                                name: 'Periareolar',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se realiza una incisión en el borde inferior de la areola.</li>
                                     <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (Contractura capsular) y el exceso de piel.</li>
@@ -521,9 +499,9 @@
                                 })">
                                 +
                             </button>
-                            <img class="w-44 lg:w-24 mx-auto" src="./assets/process-1.png" alt="Periaerolar">
+                            <img class="w-44 lg:w-24 mx-auto" src="./assets/process-1.png" alt="Periareolar">
                         </div>
-                        <h4 class="text-sinigreen font-bold mt-5">Periaerolar</h4>
+                        <h4 class="text-sinigreen font-bold mt-5">Periareolar</h4>
                         <p class="mt-7 md:mt-4 md:px-20 lg:px-0 text-sinigreen text-sm lg:text-xs">
                             Remoción de implantes con levantamiento alrededor de la areola.
                         </p>
@@ -620,7 +598,7 @@
                     <p class="mt-4">
                         Volver a ver esa gran sonrisa.
                     </p>
-                    <a href="" class="uppercase text-xs underline">
+                    <a href="/assets/files/CV.pdf" target="_blank" class="uppercase text-xs underline">
                         ver curriculum
                     </a>
                 </div>
@@ -847,7 +825,7 @@
                 <div class="text-center mt-4 lg:col-span-3">
                     <p>Comunícate para más
                         información:</p>
-                    <a href="tel:33-22-76-45-47">33-22-76-45-47</a>
+                    <a href="tel:33-22-76-35-47">33-22-76-35-47</a>
                 </div>
             </div>
 
