--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
     </style>
     <meta name="description"
-        content="Especialistas en el retiro de implantes de mama, gluteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+        content="Especialistas en el retiro de implantes de mama, glúteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
     <meta name="keywords"
         content="palabra clave 1, palabra clave 2, palabra clave 3, basadas en el contenido y temas del sitio.">
     <meta name="author" content="Last Time">
@@ -35,14 +35,14 @@
     <meta property="og:url" content="http://retirodeimplantes.com">
     <meta property="og:title" content="retirodeimplantes">
     <meta property="og:description"
-        content="Especialistas en el retiro de implantes de mama, gluteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+        content="Especialistas en el retiro de implantes de mama, glúteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
     <meta property="og:image" content="http://retirodeimplantes.com/assets/favicon.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="./assets/favicon.png">
     <meta property="twitter:url" content="http://retirodeimplantes.com">
     <meta property="twitter:title" content="Last Time">
     <meta property="twitter:description"
-        content="Especialistas en el retiro de implantes de mama, gluteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
+        content="Especialistas en el retiro de implantes de mama, glúteo, pantorrilla, mentón, etc. Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí para ayudarte a tomar la mejor decisión para tu salud y tu cuerpo.">
     <meta property="twitter:image" content="http://retirodeimplantes.com/assets/favicon.png">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets/favicon.png">
@@ -59,7 +59,7 @@
             </li>
             <li>
                 <a target="_blank"
-                    href="https://api.whatsapp.com/send?phone=5213322763547&text=Hola%2C%20quisiera%20mas%20informaci%C3%B3n%20sobre%20el%20retiro%20de%20implantes"
+                    href="https://api.whatsapp.com/send?phone=523330091319&text=Hola%2C%20quisiera%20mas%20informaci%C3%B3n%20sobre%20el%20retiro%20de%20implantes"
                     class="w-8 h-8 lg:w-11 lg:h-11 hover:scale-125 transition-all ease-linear flex justify-center items-center bg-sinigreen">
                     <img class="w-3/4" src="./assets/svg/whatsapp.svg" alt=""></a>
             </li>
@@ -262,7 +262,7 @@
                     </div>
                     <p class="mt-4">
                         Bienvenido a <span class="font-black">Last Time</span>, especialistas en el retiro de implantes
-                        de mama, gluteo, pantorrilla, mentón, etc.
+                        de mama, glúteo, pantorrilla, mentón, etc.
                     </p>
                     <p class="mt-4">
                         Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí
@@ -340,7 +340,8 @@
 
                     </p>
                     <p class="mt-4">
-                        Nuestro objetivo es proporcionarte la información y reconocer las alternativas para una mejor
+                        Nuestro objetivo es proporcionarte la información y dar a conocer las alternativas para una
+                        mejor
                         <span class="font-black">toma de decisión</span>.
                     </p>
                 </div>
@@ -353,9 +354,8 @@
             <div class="w-full flex justify-between flex-col md:flex-row">
 
                 <div class="w-full md:w-3/4 relative md:pr-12" data-entrance="from-right" data-entrance-delay="1000">
-                    <h2 class="text-2xl font-black text-siniblue">Algunas complicaciones
-                        que pudieran presentar
-                        los implantes:</h2>
+                    <h2 class="text-2xl font-black text-siniblue">Algunas patologías
+                        que pudieran presentarse:</h2>
                     <p class="mt-4">
                         Algún tiempo atrás, después de mucho meditarlo, decidiste tomar una <span
                             class="font-black">importante decisión en tu
@@ -369,9 +369,8 @@
                         no están dejándote tener la calidad de vida que esperabas.
                     </p>
                     <p class="mt-4">
-                        En algunos de los pacientes que se pusieron algún tipo de implante, se han detectado algunas
-                        complicaciones que pueden
-                        crear algunas de las siguientes patologías.
+                        Pacientes que se han aplicado implantes detectaron complicaciones que se pueden crear las
+                        siguientes patologías:
                     </p>
                     <div id="patalogies-contianer" class="w-full my-4 relative z-10">
                         <ul id="patologies-list">
@@ -443,7 +442,7 @@
                         <span class="font-bold">más tiempo</span> tenga los implantes, mayores serán las posibilidades
                         de que desarrolle
                         complicaciones, algunas de las cuales
-                        requerirán más cirugía.
+                        requerirán más intervenciones quirúrgicas.
                     </p>
                     <p class="mt-4 md:text-sm text-siniblue">
                         Aunque la ciencia ha avanzado a pasos agigantados y los implantes son diseñados con la
@@ -481,6 +480,10 @@
                         Conoce cuales son nuestros procedimientos, tenemos más de 15 años generando resultados para
                         nuestros pacientes.
                     </p>
+                    <p class="mt-4 text-sinigreen text-sm">
+                        Los implantes (con su cápsula) se pueden retirar a través de las cicatrices originales, en caso
+                        de necesitar un levantamiento existen estas tres técnicas:
+                    </p>
                 </div>
                 <div class="mt-10 lg:w-2/3 lg:flex lg:flex-row" data-entrance="from-left" data-entrance-delay="1000">
                     <div class="flex-col justify-center items-center text-center px-6 lg:px-2 lg:w-1/3 relative">
@@ -491,8 +494,7 @@
                                 name: 'Periareolar',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se realiza una incisión en el borde inferior de la areola.</li>
-                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (Contractura capsular) y el exceso de piel.</li>
-                                    <li>Una vez retirado el implante el cirujano retira el exceso de piel y cápsula (Contractura capsular) con una insición periareolar (alrededor de la areola) como muestra la imagen.</li>
+                                    <li>A través de estas incisiones, el cirujano el retira el implante, la cápsula (Contractura capsular) y el exceso de piel con una insición periareolar (alrededor de la areola) como muestra la imagen.</li>
                                     <li>La incisión se cierra con suturas y se aplica un vendaje.</li>
                                     </ul>`,
                                 image: './assets/process-1.png'
@@ -551,7 +553,7 @@
                         <h4 class="text-sinigreen font-bold mt-5">Tipo "T"</h4>
                         <p class="mt-7 md:mt-4 md:px-20 lg:px-0 text-sinigreen text-sm lg:text-xs">
                             A través de estas incisiones, el cirujano remueve el exceso de piel y tejido si es
-                            necesario, y crea un bolsillo para el implante.
+                            necesario.
                         </p>
                     </div>
                 </div>
