add: text correction and compile css to prod

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link href="./css/tailwindcss-compiled.css" rel="stylesheet">
+    <link href="./css/tailwindcss-prod.min.css" rel="stylesheet">
     <link href="./css/splide-default.min.css" rel="stylesheet">
     <link href="./css/custom.css" rel="stylesheet">
 
@@ -82,7 +82,7 @@
                                 <text id="Dile_adios_a_tus_implantes" data-name="Dile adios a tus implantes"
                                     transform="translate(49 105)" fill="#707070" font-size="19"
                                     font-family="Montserrat-SemiBold, Montserrat" font-weight="600">
-                                    <tspan x="0" y="0">Dile adios a tus implantes</tspan>
+                                    <tspan x="0" y="0">Dile adiós a tus implantes</tspan>
                                 </text>
                                 <g id="Polígono_1" data-name="Polígono 1"
                                     transform="translate(223.454 35.311) rotate(31)" fill="#fff">
@@ -149,29 +149,35 @@
                     <nav aria-label="Global" class="hidden md:block">
                         <ul class="flex items-center gap-4 text-xs xl:text-base leading-tight">
                             <li>
-                                <a class="text-gray-500 transition  hover:text-gray-500/75" href="#inicio"> Inicio </a>
+                                <a class="text-gray-500 transition  hover:text-siniblue hover:font-bold ease-linear"
+                                    href="#inicio">
+                                    Inicio </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-500 transition  hover:text-gray-500/75" href="#por-que-retirar">
+                                <a class="text-gray-500 transition  hover:text-siniblue hover:font-bold ease-linear"
+                                    href="#por-que-retirar">
                                     ¿Por qué retirar
                                     mis implantes? </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-500 transition  hover:text-gray-500/75" href="#complicaciones">
+                                <a class="text-gray-500 transition  hover:text-siniblue hover:font-bold ease-linear"
+                                    href="#complicaciones">
                                     Complicaciones
                                 </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-500 transition  hover:text-gray-500/75" href="#procedimientos">
+                                <a class="text-gray-500 transition  hover:text-siniblue hover:font-bold ease-linear"
+                                    href="#procedimientos">
                                     Procedimientos
                                 </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-500 transition  hover:text-gray-500/75" href="#especialista">
+                                <a class="text-gray-500 transition  hover:text-siniblue hover:font-bold ease-linear"
+                                    href="#especialista">
                                     Especialista </a>
                             </li>
                         </ul>
@@ -202,17 +208,20 @@
                                 class="absolute left-0 top-0 h-full w-2/3 lg:w-1/2 flex flex-col justify-center items-center pl-16 pr-4 bg-gradient-to-r from-white to-transparent">
                                 <h1
                                     class="font-black uppercase text-siniblue leading-tight md:text-xl lg:text-2xl xl:text-3xl">
-                                    Un
-                                    nuevo cambio
-                                    para ti y
-                                    para tu nueva vida.</h1>
+                                    Un cambio para ti y para tu nueva vida.</h1>
                                 <p class="mt-4 text-xs md:text-base xl:text-lg">Evita un problema y toma la mejor
                                     decisión
                                     para tu salud y tu cuerpo.</p>
                                 <div class="mt-4">
-                                    <a class="bg-siniblue leading-none uppercase text-white text-sm font-bold px-6 py-2 rounded-full"
+                                    <a class="bg-siniblue leading-none uppercase text-white text-sm font-bold px-6 py-2 rounded-full inline-flex"
                                         href="#contact">
-                                        Contactar
+                                        Hacer cita
+                                        <span class="ml-2">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3" viewBox="0 0 20 23">
+                                                <path id="Polígono_6" data-name="Polígono 6" d="M11.5,0,23,20H0Z"
+                                                    transform="translate(20) rotate(90)" fill="#fff" />
+                                            </svg>
+                                        </span>
                                     </a>
                                 </div>
                             </div>
@@ -262,7 +271,8 @@
                     </div>
                     <p class="mt-4">
                         Bienvenido a <span class="font-black">Last Time</span>, especialistas en el retiro de implantes
-                        de mama, glúteo, pantorrilla, mentón, etc.
+                        de mama.
+                        <!-- de mama, glúteo, pantorrilla, mentón, etc. -->
                     </p>
                     <p class="mt-4">
                         Con años de experiencia y un enfoque centrado en el bienestar de cada paciente, estamos aquí
@@ -329,7 +339,7 @@
                     </div>
                 </div>
                 <div class="w-full md:w-3/4 md:pl-8" data-entrance="from-left" data-entrance-delay="1000">
-                    <h2 class="text-2xl font-black">¿Por Qué Retirar <br> Los Implantes?</h2>
+                    <h2 class="text-2xl font-black">¿Por qué retirar <br> los implantes?</h2>
                     <p class="mt-4">
                         Con el paso del tiempo, tus necesidades y deseos pueden cambiar. Ya sea por <span
                             class="font-black">razones de salud</span>,
@@ -369,8 +379,8 @@
                         no están dejándote tener la calidad de vida que esperabas.
                     </p>
                     <p class="mt-4">
-                        Pacientes que se han aplicado implantes detectaron complicaciones que se pueden crear las
-                        siguientes patologías:
+                        Algunas pacientes que tuvieron implantes de seno en el pasado, detectaron ciertas
+                        complicaciones, que pueden derivar en las siguientes patologías:
                     </p>
                     <div id="patalogies-contianer" class="w-full my-4 relative z-10">
                         <ul id="patologies-list">
@@ -433,16 +443,13 @@
                 </div>
                 <div class="w-full md:w-1/2 mt-10 md:mt-0 relative md:pl-6 md:py-5 pr-10 md:pr-0"
                     data-entrance="from-top" data-entrance-delay="1000">
-                    <h2 class="text-2xl md:text-lg font-black text-siniblue">¿Sabías que los Implantes
+                    <h2 class="text-2xl md:text-lg font-black text-siniblue">¿Sabías que los implantes
                         no son para toda la vida?</h2>
                     <p class="mt-4 md:text-sm text-siniblue">
                         Toda mujer que se <span class="font-bold">someta a un aumento de senos</span>, debe estar
-                        consciente que no son dispositivos
-                        para toda la vida. Cuanto
-                        <span class="font-bold">más tiempo</span> tenga los implantes, mayores serán las posibilidades
-                        de que desarrolle
-                        complicaciones, algunas de las cuales
-                        requerirán más intervenciones quirúrgicas.
+                        consciente que no son dispositivos para toda la vida. Cuanto <span class="font-bold">más
+                            tiempo</span> tenga con los implantes, mayores serán las posibilidades de que desarrolle
+                        complicaciones, algunas de las cuales requerirán más intervenciones quirúrgicas
                     </p>
                     <p class="mt-4 md:text-sm text-siniblue">
                         Aunque la ciencia ha avanzado a pasos agigantados y los implantes son diseñados con la
@@ -468,21 +475,18 @@
                 class="w-11/12 xl:w-full mx-auto bg-siniblue rounded-2xl px-5 py-5 lg:flex-row lg:flex-wrap lg:flex lg:py-10">
                 <div class="w-full lg:w-1/3" data-entrance="from-right" data-entrance-delay="1000">
                     <h3 class="text-sinigreen font-black text-xl">
-                        Nuestros
-                        procedimientos Quirúrgicos
+                        Nuestros procedimientos quirúrgicos
                     </h3>
                     <p class="mt-4 text-sinigreen text-sm">
-                        La técnica quirúrgica varía en cada paciente, nuestro objetivo será encontrar la mejor manera de
-                        llegar a un resultado
-                        óptimo.
+                        Tenemos más de 15 años generando resultados para nuestros pacientes.
                     </p>
                     <p class="mt-4 text-sinigreen text-sm">
-                        Conoce cuales son nuestros procedimientos, tenemos más de 15 años generando resultados para
-                        nuestros pacientes.
+                        La técnica quirúrgica varía en cada paciente de acuerdo a su caso y nuestro objetivo será
+                        encontrar la mejor manera para llegar a un resultado óptimo.
                     </p>
                     <p class="mt-4 text-sinigreen text-sm">
-                        Los implantes (con su cápsula) se pueden retirar a través de las cicatrices originales, en caso
-                        de necesitar un levantamiento existen estas tres técnicas:
+                        Los implantes (con su cápsula) se pueden retirar a través de las cicatrices originales, y en
+                        caso de necesitar un levantamiento existen tres técnicas. Te invitamos a conocerlas:
                     </p>
                 </div>
                 <div class="mt-10 lg:w-2/3 lg:flex lg:flex-row" data-entrance="from-left" data-entrance-delay="1000">
@@ -494,7 +498,7 @@
                                 name: 'Periareolar',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se realiza una incisión en el borde inferior de la areola.</li>
-                                    <li>A través de estas incisiones, el cirujano el retira el implante, la cápsula (Contractura capsular) y el exceso de piel con una insición periareolar (alrededor de la areola) como muestra la imagen.</li>
+                                    <li>A través de estas incisiones, el cirujano el retira el implante, la cápsula (contractura capsular) y el exceso de piel con una insición periareolar (alrededor de la areola) como muestra la imagen.</li>
                                     <li>La incisión se cierra con suturas y se aplica un vendaje.</li>
                                     </ul>`,
                                 image: './assets/process-1.png'
@@ -517,7 +521,7 @@
                                 name: 'Vertical',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se hace una incisión alrededor del borde inferior de la areola y una segunda incisión vertical desde la areola hasta el pliegue del seno.</li>
-                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (Contractura capsular) y el exceso de piel.</li>
+                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (contractura capsular) y el exceso de piel.</li>
                                     <li>Las incisiones se cierran con suturas y se coloca un vendaje.</li>
                                     </ul>`,
                                 image: './assets/process-2.png'
@@ -541,7 +545,7 @@
                                 name: 'Tipo T',
                                 description: `<ul class='list-decimal px-6'>
                                     <li>Se realizan tres incisiones: una alrededor del borde de la areola, una vertical desde la areola hasta el pliegue del seno, y una horizontal a lo largo del pliegue del seno, formando una T invertida.</li>
-                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (Contractura capsular) y el exceso de piel.</li>
+                                    <li>A través de estas incisiones, el cirujano retira tanto el implante, la cápsula (contractura capsular) y el exceso de piel.</li>
                                     <li>Las incisiones se cierran con suturas y se aplica un vendaje.</li>
                                     </ul>`,
                                 image: './assets/process-3.png'
@@ -575,7 +579,7 @@
                 <div class="w-full md:w-1/2 md:pl-6 md:pr-8 xl:pr-16 pr-10 " data-entrance="from-bottom"
                     data-entrance-delay="1000">
                     <h3 class="text-2xl font-black text-siniblue">
-                        Conoce a tú próximo Especialista
+                        Conoce a tu próximo especialista
                     </h3>
                     <h2 class="mt-4 font-bold text-siniblue text-xl">Dr. David Sánchez Sigel</h2>
                     <p class="font-bold text-siniblue text-sm">
@@ -598,10 +602,17 @@
                         mejorar circunstancialmente la salud de sus pacientes.
                     </p>
                     <p class="mt-4">
-                        Volver a ver esa gran sonrisa.
+                        Queremos volver a ver esa gran sonrisa.
                     </p>
-                    <a href="/assets/files/CV.pdf" target="_blank" class="uppercase text-xs underline">
+                    <a class="bg-siniblue leading-none uppercase text-white text-sm font-bold px-6 py-2 rounded-full inline-flex mt-4"
+                        href="/assets/files/CV.pdf" target="_blank">
                         ver curriculum
+                        <span class="ml-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3" viewBox="0 0 20 23">
+                                <path id="Polígono_6" data-name="Polígono 6" d="M11.5,0,23,20H0Z"
+                                    transform="translate(20) rotate(90)" fill="#fff" />
+                            </svg>
+                        </span>
                     </a>
                 </div>
 
@@ -610,11 +621,12 @@
         <section id="contact" class="bg-siniblue w-full mt-20 relative">
             <div class="text-center py-10 px-6 xl:w-1/3 mx-auto">
                 <h4 class="text-siniemerald uppercase font-black">CONTÁCTANOS</h4>
-                <h2 class="text-sinigreen font-bold text-lg leading-tight mt-4">Buscamos la mejor manera
-                    de que tus implantes vuelvan a
-                    darte una mejor calidad de vida</h2>
-                <p class="mt-4 text-white text-xs">Solo llena el formulario y nos comunicaremos contigo en la brevedad
-                    posible.</p>
+                <h2 class="text-sinigreen font-bold text-lg leading-tight mt-4">
+                    Buscamos la mejor manera de brindarte una mejor calidad de vida sin tus implantes de seno.
+                </h2>
+                <p class="mt-4 text-white text-xs">
+                    Sólo llena el formulario y nos comunicaremos contigo a la brevedad posible.
+                </p>
             </div>
             <div class="relative z-10">
                 <div id="error-alert" class=" text-center py-4 lg:px-4 hidden">
@@ -632,10 +644,9 @@
                     <div class="p-2 bg-green-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex"
                         role="alert">
                         <span
-                            class="flex rounded-full bg-green-500 uppercase px-2 py-1 text-xs font-bold mr-3 text-white">Error</span>
+                            class="flex rounded-full bg-green-500 uppercase px-2 py-1 text-xs font-bold mr-3 text-white">Éxito</span>
                         <span class="font-semibold mr-2 text-left flex-auto text-white">
-                            <span id="success-message" class="text-white"> al enviar el formulario, por favor intenta de
-                                nuevo.</span>
+                            <span id="success-message" class="text-white"> El formulario ha sido enviado</span>
                         </span>
                     </div>
                 </div>
@@ -762,7 +773,7 @@
                                 <text id="Dile_adios_a_tus_implantes" data-name="Dile adios a tus implantes"
                                     transform="translate(49 105)" fill="#707070" font-size="19"
                                     font-family="Montserrat-SemiBold, Montserrat" font-weight="600">
-                                    <tspan x="0" y="0">Dile adios a tus implantes</tspan>
+                                    <tspan x="0" y="0">Dile adiós a tus implantes</tspan>
                                 </text>
                                 <g id="Polígono_1" data-name="Polígono 1"
                                     transform="translate(223.454 35.311) rotate(31)" fill="#fff">
