fix: wording necesario/s

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                         </ul>
                     </div>
                     <p class="mt-4 relative z-10">
-                        Nuestro objetivo es proporcionarte la información y el apoyo necesarios para que <span
+                        Nuestro objetivo es proporcionarte la información y el apoyo necesario para que <span
                             class="font-black">tomes una decisión informada</span>.
                     </p>
                     <div id="plants-siluette-4" class="absolute -left-20 bottom-0 transform z-0 rotate-90 opacity-50">
