add: more info in footer about available hours

--- a/index.html
+++ b/index.html
@@ -835,10 +835,18 @@
 
 
                 </div>
-                <div class="text-center mt-4 lg:col-span-3">
-                    <p>Comunícate para más
-                        información:</p>
-                    <a href="tel:33-22-76-35-47">33-22-76-35-47</a>
+                <div class="text-center mt-4 lg:col-span-3 ">
+                    <div class="max-w-lg mx-auto">
+                        <p>Comunícate para más
+                            información:</p>
+                        <a href="tel:3318149511" class="underline">33-18-14-95-11</a>
+                        <p>
+                            los horarios de atención de 10am a 2pm y de 3pm a 7pm y el domicilio es Av. Hidalgo 2316
+                            colonia
+                            Vallarta
+                            Norte.
+                        </p>
+                    </div>
                 </div>
             </div>
 
