--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             </li>
         </ul>
     </div>
+    <dvi id="cofepris">
+        <p>No. Autorización COFEPRIS 2414102002A00473</p>
+    </dvi>
     <header class="bg-white fixed z-40 w-full top-0 navbar xl:py-2 xl:shadow-lg">
         <div class="mx-auto max-w-screen-xl px-4 sm:px-6 md:px-4 lg:px-8">
             <div class="flex h-16 items-center justify-between">
